# automodal-tams

./: .editorconfig  .gitignore  README.md  automodal-tams.service  export.json  pyproject.toml  run_all_checks.sh
src/tams/: main.py
src/tams/ccs/: ccs.py  enums.py  types.py
src/tams/metric/: metric.py
src/tams/state/: state.py
src/tams/storage/: storage.py
src/tams/web/: msg.py  web.py
src/tams/web/assets/css/: dashboard.css  map.css
src/tams/web/assets/js/: index.js
src/tams/web/template/: base.html  dashboard.html  dashboard_base.html  index.html  map.html  partial_crane_status.html  partial_footer.html  partial_job.html  partial_stacks.html
src/tams/web/template/ajax/: auto_job.html  crane_status.html  job_list.html  job_status.html  partial_stacks_auto.html  partial_stacks_drop.html  partial_stacks_init.html  partial_stacks_pos.html  stacks.html  stacks_init.html
tests/unit/state/: test_state.py
