[tool.poetry]
name = "tams"
version = "0.0.1"
description = ""
authors = [
    "Moritz Sauter <sauter@synyx.de>",
    "David Bauer <bauer@synyx.de>",
]
license = "MIT"
readme = "README.md"

packages = [
    { include = "tams", from = "src" }
]

[tool.poetry.scripts]
tams = "tams.main:run"

[tool.poetry.dependencies]
python = "^3.8"
overrides = "^6.1.0"
Flask = "^2.1.2"
dataclasses-json = "^0.5.7"
StrEnum = "^0.4.7"
requests = "^2.28.0"
Flask-Cors = "^3.0.10"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.7"
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
pyupgrade = "^3.3.1"
isort = "^5.11.4"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry_core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.master]
extension-pkg-whitelist = ["numpy", "cv2"]
jobs = 0

[tool.pylint.basic]
good-names = [
    "i", # iterator
    "_", "__", "___", # unneeded variable
    "T", # generic type
    "id",
]

[tool.pylint.typecheck]
# pure c module
generated-members = ["prctl.set_name"]
# necessary, at least for systems without cuda
# otherwise extension-pkg-whitelist should do the trick
ignored-modules = [
    "cv2.fisheye"
]

[tool.pylint.message_control]
disable = [
    "missing-module-docstring", "missing-class-docstring", "missing-function-docstring",
    "no-member", # sadly dataclass_json annotations don't work with pylint
    "line-too-long",
    "too-few-public-methods",
    "duplicate-code",
    "too-many-ancestors",
]
enable = [
    "useless-suppression"
]

[tool.pylint.design]
max-attributes = 10

[tool.mypy]
python_version = "3.10"
files = "src"

junit_xml = "xunit-reports/xunit-result-mypy.xml"

# output style configuration
show_column_numbers = true
show_error_codes = true
pretty = true

# additional warnings
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true

no_implicit_optional = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true

enable_error_code = [
    "ignore-without-code",
]

# ignores that library has no typing information with it
[[tool.mypy.overrides]]
module = [
    "prctl",
    "paho.*",
    "snap7.*",
    "strenum",
    "dataclasses_json",
    "flask_cors"
]
ignore_missing_imports = true
